--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "unilime_test",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://artemgr98.github.io/unilime_test/",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.6",
     "@testing-library/jest-dom": "^5.16.5",
@@ -11,7 +10,6 @@
     "axios": "^1.1.3",
     "eslint": "8.22.0",
     "formik": "^2.2.9",
-    "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
@@ -25,9 +23,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
